Created hero section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,72 @@
           </svg>
         </div>
       </nav>
+
+      <section class="hero-sec">
+        <div class="hero-info">
+          <div class="hero-desc">
+            <h1>
+              Helping Creative <br />
+              professionals level up <br />
+              their careers
+            </h1>
+
+            <p>
+              I'm a designer,writer,speaker & content creator here to <br />
+              be your cheerleader,teacher & virtual mentor as you <br />
+              improve your craf and navigate your design career.
+            </p>
+          </div>
+
+          <img
+            src="./assets/photos/hero-woman-main.jpg"
+            alt="hero-woman-main"
+            class="hero-woman-main"
+          />
+
+          <img
+            src="./assets/photos/hero-woma-first.jpg"
+            alt="hero-wom-first"
+            class="hero-wom-first"
+          />
+
+          <img
+            src="./assets/photos/heart-hero.svg"
+            alt="hero-heart"
+            class="hero-heart"
+          />
+
+          <img
+            src="./assets/photos/hero-woma-second.jpg"
+            alt="woman-secon"
+            class="hero-woman-second"
+          />
+
+          <img
+            src="./assets/photos/hero-star.svg"
+            alt="hero-star"
+            class="hero-star"
+          />
+
+          <img src="./assets/photos/hero-arrow-1.svg" class="hero-arrow" />
+          <p class="hero-name">Hi, I'm Charli</p>
+        </div>
+
+        <!-- hero-contact-sec -->
+        <div class="hero-contact">
+          <img
+            src="./assets/photos/hero-contact-marke.svg"
+            class="hero-contact-marketing"
+          />
+          <input type="email" placeholder="Your email address" />
+          <button>Get the dispatch</button>
+          <p>
+            Join 30,000+ creatives who get inspiration,marketing site breakdowns
+            & <br />
+            musings on leading a Brand team in tech.
+          </p>
+        </div>
+      </section>
     </div>
   </body>
 </html>
