--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./assets/photos/fevicon.png" type="image/x-icon">
   </head>
   <body>
     <div class="wrapper">
@@ -66,7 +67,7 @@
           </svg>
         </div>
       </nav>
-
+      <!-- hero-sec -->
       <section class="hero-sec">
         <div class="hero-info">
           <div class="hero-desc">
@@ -130,6 +131,133 @@
             & <br />
             musings on leading a Brand team in tech.
           </p>
+        </div>
+
+        <!-- last squiggle -->
+        <div class="squiggle">
+          <img src="./assets/photos/hero-squiggle-1.svg" class="squiggle-img" />
+        </div>
+      </section>
+
+      <!-- inside-marketing-design -->
+      <section class="inside-mark-design">
+
+        <div class="inside-mark-info">
+
+          <div class="inside-photo">
+            <img
+              src="./assets/photos/inside-sec-photo.webp"
+              alt="inside-photo"
+            />
+          </div>
+
+          <!-- inside-info-right -->
+          <div class="inside-info">
+            <img src="./assets/photos/inside-info-right.svg" class="inside-right-photo" />
+            
+            <h3>
+              Your go-to guide for brand & <br />
+              marketing design
+            </h3>
+
+            <p>
+              I'm currently writing a book about increasing the impact of your
+              <br />
+              in-house brand & marketing design work. In the meantime, you
+              <br />
+              can dive in to episodes of the Inside Marketing Designs podcast
+              for <br />
+              juicy insights into the principles, process and projects of some
+              <br />
+              of your favourite tech companies.
+            </p>
+
+            <div class="podcasts">
+              <svg
+                width="23"
+                height="24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M20.657 22.237a4.766 4.766 0 0 0 1.442-1.892c.441-1.122.446-2.394.446-3.195V7.003c0-.801-.005-2.073-.446-3.195a4.766 4.766 0 0 0-3.03-2.717c-.723-.215-1.615-.287-2.724-.287H6.2c-1.11 0-2.001.072-2.725.287a4.765 4.765 0 0 0-3.03 2.717C.006 4.931 0 6.203 0 7.004V17.15c0 .8.004 2.073.446 3.195a4.766 4.766 0 0 0 3.03 2.717c.723.215 1.614.287 2.724.287h10.145c1.11 0 2-.072 2.725-.287a4.72 4.72 0 0 0 1.587-.825Zm-9.383-9.06c.702 0 1.296.229 1.634.586.177.186.27.377.3.65.056.526.024.98-.037 1.704-.06.691-.17 1.613-.317 2.551-.103.668-.187 1.029-.264 1.287-.124.418-.59.784-1.316.784-.727 0-1.191-.366-1.316-.784-.076-.258-.16-.619-.264-1.287a39.241 39.241 0 0 1-.316-2.55c-.062-.726-.094-1.18-.037-1.706.03-.272.123-.463.3-.649.337-.357.932-.586 1.633-.586Zm.002-.747a1.845 1.845 0 1 1 0-3.69 1.845 1.845 0 0 1 0 3.69ZM3.349 11.13c.053-4.314 3.589-7.815 7.904-7.827 4.382-.013 7.95 3.548 7.95 7.928 0 3.452-2.217 6.395-5.303 7.48a.106.106 0 0 1-.14-.115c.04-.271.079-.544.114-.812a.272.272 0 0 1 .16-.215 6.923 6.923 0 0 0 4.155-6.339 6.921 6.921 0 0 0-6.97-6.913c-3.754.03-6.82 3.091-6.856 6.846a6.923 6.923 0 0 0 4.154 6.406c.088.038.148.12.16.215.036.268.075.54.116.812a.106.106 0 0 1-.14.115c-3.116-1.095-5.348-4.085-5.304-7.58Zm12.227.103A4.301 4.301 0 0 0 11.11 6.94a4.308 4.308 0 0 0-4.126 4.177 4.285 4.285 0 0 0 1.357 3.248c.07.066.109.16.103.257-.016.295-.01.582.01.906a.104.104 0 0 1-.163.093 5.309 5.309 0 0 1-2.322-4.457c.036-2.812 2.29-5.13 5.1-5.238a5.317 5.317 0 0 1 5.521 5.307 5.31 5.31 0 0 1-2.322 4.387.105.105 0 0 1-.162-.092c.02-.324.025-.61.009-.906a.329.329 0 0 1 .103-.258 4.285 4.285 0 0 0 1.358-3.131Z"
+                  fill="currentColor"
+                ></path>
+              </svg>
+
+              <svg
+                width="25"
+                height="25"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12.81 0C6.082 0 .621 5.408.621 12.07c0 6.677 5.461 12.07 12.19 12.07C19.552 24.14 25 18.733 25 12.07 25.015 5.408 19.553 0 12.81 0Zm5.593 17.42a.761.761 0 0 1-1.049.245c-2.869-1.73-6.466-2.12-10.718-1.168-.408.087-.816-.158-.903-.562a.746.746 0 0 1 .568-.894c4.645-1.053 8.636-.606 11.84 1.341a.726.726 0 0 1 .262 1.038Zm1.5-3.288a.97.97 0 0 1-1.31.318c-3.278-2.005-8.273-2.582-12.147-1.414-.51.145-1.034-.13-1.18-.62a.931.931 0 0 1 .642-1.168c4.427-1.326 9.932-.692 13.704 1.6.422.26.568.837.29 1.284Zm.13-3.432C16.103 8.393 9.622 8.177 5.864 9.301a1.15 1.15 0 0 1-1.426-.75c-.19-.59.16-1.225.757-1.413C9.504 5.84 16.67 6.1 21.184 8.753a1.12 1.12 0 0 1 .394 1.543 1.115 1.115 0 0 1-1.544.404Z"
+                  fill="currentColor"
+                ></path>
+              </svg>
+
+              <svg
+                width="31"
+                height="22"
+                viewBox="0 0 31 22"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12.33 15.518V6.306l8.102 4.606-8.102 4.606zm18.022-12.11a3.893 3.893 0 0 0-2.74-2.756C25.193 0 15.5 0 15.5 0S5.806 0 3.389.652A3.893 3.893 0 0 0 .648 3.408C0 5.839 0 10.912 0 10.912s0 5.073.648 7.504a3.894 3.894 0 0 0 2.74 2.757c2.418.651 12.112.651 12.112.651s9.694 0 12.111-.651a3.894 3.894 0 0 0 2.741-2.757C31 15.985 31 10.912 31 10.912s0-5.073-.648-7.504z"
+                  fill="currentColor"
+                  fill-rule="evenodd"
+                ></path>
+              </svg>
+
+              <a href="#"
+                >Go to podcase site
+                <svg
+                  width="28"
+                  height="12"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="m11.856.719 4.918 4.753a.73.73 0 0 1 0 1.056l-4.918 4.753a.792.792 0 0 1-1.093 0 .73.73 0 0 1 0-1.056l3.599-3.478H.772A.76.76 0 0 1 0 6a.76.76 0 0 1 .773-.747h13.589l-3.599-3.478a.73.73 0 0 1 0-1.056.792.792 0 0 1 1.093 0Z"
+                    fill="currentColor"
+                  ></path>
+                </svg>
+              </a>
+            </div>
+
+          <div class="featuring-companies">
+            <p class="featuring-com-head">
+              Episodes featuring these <br>
+               companies & many more
+            </p>
+
+
+            <img src="./assets/photos/inside-arrow-2.svg" class="inside-arrow">
+
+            <div class="comapnies">
+              <img src="./assets/photos/inside-webflow-logo.svg" alt="">
+
+              <img src="./assets/photos/inside_Dropbox-logi.svg" alt="">
+
+              <img src="./assets/photos/inside_shopify-logo.svg" alt="">
+
+              <img src="./assets/photos/inside_figma-logo.svg" alt="">
+
+              <img src="./assets/photos/inside_notion-logo.svg" alt="">
+
+              <img src="./assets/photos/inside_doist-logo.svg" alt="">
+
+              <img src="./assets/photos/insidef_loom-logo.svg" alt="">
+
+              <img src="./assets/photos/inside_stripe-logo.svg" alt="">
+            </div>
+          </div>
+          </div>
         </div>
       </section>
     </div>
