Created Personal brand info sec

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="./assets/photos/fevicon.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./assets/photos/fevicon.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="wrapper">
@@ -141,9 +145,7 @@
 
       <!-- inside-marketing-design -->
       <section class="inside-mark-design">
-
         <div class="inside-mark-info">
-
           <div class="inside-photo">
             <img
               src="./assets/photos/inside-sec-photo.webp"
@@ -153,8 +155,11 @@
 
           <!-- inside-info-right -->
           <div class="inside-info">
-            <img src="./assets/photos/inside-info-right.svg" class="inside-right-photo" />
-            
+            <img
+              src="./assets/photos/inside-info-right.svg"
+              class="inside-right-photo"
+            />
+
             <h3>
               Your go-to guide for brand & <br />
               marketing design
@@ -230,33 +235,114 @@
               </a>
             </div>
 
-          <div class="featuring-companies">
-            <p class="featuring-com-head">
-              Episodes featuring these <br>
-               companies & many more
-            </p>
+            <div class="featuring-companies">
+              <p class="featuring-com-head">
+                Episodes featuring these <br />
+                companies & many more
+              </p>
 
+              <img
+                src="./assets/photos/inside-arrow-2.svg"
+                class="inside-arrow"
+              />
 
-            <img src="./assets/photos/inside-arrow-2.svg" class="inside-arrow">
+              <div class="comapnies">
+                <img src="./assets/photos/inside-webflow-logo.svg" alt="" />
 
-            <div class="comapnies">
-              <img src="./assets/photos/inside-webflow-logo.svg" alt="">
+                <img src="./assets/photos/inside_Dropbox-logi.svg" alt="" />
 
-              <img src="./assets/photos/inside_Dropbox-logi.svg" alt="">
+                <img src="./assets/photos/inside_shopify-logo.svg" alt="" />
 
-              <img src="./assets/photos/inside_shopify-logo.svg" alt="">
+                <img src="./assets/photos/inside_figma-logo.svg" alt="" />
 
-              <img src="./assets/photos/inside_figma-logo.svg" alt="">
+                <img src="./assets/photos/inside_notion-logo.svg" alt="" />
 
-              <img src="./assets/photos/inside_notion-logo.svg" alt="">
+                <img src="./assets/photos/inside_doist-logo.svg" alt="" />
 
-              <img src="./assets/photos/inside_doist-logo.svg" alt="">
+                <img src="./assets/photos/insidef_loom-logo.svg" alt="" />
 
-              <img src="./assets/photos/insidef_loom-logo.svg" alt="">
-
-              <img src="./assets/photos/inside_stripe-logo.svg" alt="">
+                <img src="./assets/photos/inside_stripe-logo.svg" alt="" />
+              </div>
             </div>
           </div>
+        </div>
+      </section>
+
+      <!-- persoanl branding sec -->
+      <section class="personal-brand-sec">
+        <div class="personal-brand-info">
+          <div class="person-brand">
+            <h2>
+              Craft a personal brand that <br />
+              helps you reach your career <br />
+              goals
+            </h2>
+
+            <p>
+              The <strong>Crafting a Personal Brand workshop</strong> is
+              designed to help <br />
+              creative professionals like you to establish a clear and
+              powerful<br />
+              persoanl brand.It'll help you to fearlessly embrace self- <br />
+              promotion,and take action building a reputation that will open
+              <br />
+              doors and elevate your career.
+            </p>
+
+            <p>
+              My persoanl brand has been a key factoring in landing
+              opportunities
+              <br />
+              throughout my design career,and now I've created a famework <br />
+              to help you craft yours too.
+            </p>
+
+            <button>Get the on-demand workshop</button>
+          </div>
+
+          <!-- inspirign photo -->
+          <div class="persoanl-photo">
+            <img
+              src="./assets/photos/persoanal_sec_homepage-img (1).webp"
+              class="personal-homepage"
+            />
+            <img
+              src="./assets/photos/personal_squiggle-2.svg"
+              class="personal-squiggle"
+            />
+          </div>
+        </div>
+
+        <!-- handwrriten sec -->
+        <div class="handwritten-sec">
+          <img
+            src="./assets/photos/handwritten_promo-grayscale.jpg"
+            alt="handwritten_promo-grayscale"
+          />
+
+          <div class="handwritten-info">
+            <h3>Need a highly readable handwritten font?</h3>
+            <p>
+              Grayscale is a sans-serif font designed for legibility with a
+              handmade feel
+            </p>
+
+            <a href="#"
+              >Get the font
+              <svg
+                width="17"
+                height="12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="m11.856.719 4.918 4.753a.73.73 0 0 1 0 1.056l-4.918 4.753a.792.792 0 0 1-1.093 0 .73.73 0 0 1 0-1.056l3.599-3.478H.772A.76.76 0 0 1 0 6a.76.76 0 0 1 .773-.747h13.589l-3.599-3.478a.73.73 0 0 1 0-1.056.792.792 0 0 1 1.093 0Z"
+                  fill="currentColor"
+                ></path>
+              </svg>
+            </a>
           </div>
         </div>
       </section>
